<resources>
    <string name="app_name">TheIncredibleMe</string>
    <string name="app_name_farsi">من شگفت انگیز</string>
    <string name="flower">روانشناسی گل</string>
    <string name="color">تست رنگ</string>
    <string name="personality">شخصیت شناسی</string>
    <string name="dateOfBirth">تست تاریخ تولد</string>
    <string name="courage">شجاعت اجتماعی</string>
    <string name="curious">تست فضولی</string>
    <string name="personalityPlus">شخصیت شناسی پلاس</string>
    <string name="intro">درونگرایی و برونگرایی</string>
    <string name="marriage">ازدواج</string>
    <string name="depression">افسردگی</string>
    <string name="nervous">الان مضطربی؟</string>
    <string name="radio_name_one"> گل پامچال </string>
    <string name="radio_name_two"> گل نرگس </string>
    <string name="radio_name_three"> گل سنبل </string>
    <string name="radio_name_four"> گل رز </string>
    <string name="radio_name_five"> گل ارکیده </string>
    <string name="radio_name_six"> گل استکانی آبی </string>
    <string name="radio_name_seven"> گل شب بو </string>
    <string name="radio_name_eight"> گل بنفشه </string>
    <string name="radio_name_nine"> گل شقایق </string>
    <string name="depShareTop"><![CDATA[<html>

<P>سلام</P>
<P>این نتیجه ی تست افسردگی من که برنامه ی من شگفت انگیز برام حساب کرده:</P>
<br>

</html>]]></string>
    <string name="depSharebot"><![CDATA[<html>
    <br>
<P>میتونی از کافه بازار یا مایکت دانلود کنی که توهم مثل من بیشتر خودتو شخصیتتو بشناسی.</P>
<br>


</html>]]></string>
    <string name="strShare"><![CDATA[<html>

<P>سلام</P>
<P>این نتیجه ی تست استرس من که برنامه ی من شگفت انگیز برام حساب کرده:</P>
<br>

</html>]]></string>
    <string name="mShare"><![CDATA[<html>

<P>سلام</P>
<P>این نتیجه ی تست ازدواج من که برنامه ی من شگفت انگیز برام حساب کرده:</P>
<br>

</html>]]></string>
    <string name="eShare"><![CDATA[<html>

<P>سلام</P>
<P> این نتیجه ی تست درون گرایی یا برون گرایی من که برنامه ی من شگفت انگیز برام حساب کرده : </P>
<br>

</html>]]></string>
    <string name="iShare"><![CDATA[<html>

<P>سلام</P>
<P> این نتیجه ی تست شخصیت شناسی من که برنامه ی من شگفت انگیز برام حساب کرده : </P>
<br>

</html>]]></string>
    <string name="cShare"><![CDATA[<html>

<P>سلام</P>
<P>این روانشناسی رنگ مورد علاقع ی من که برنامه ی من شگفت انگیز بهم نشون داده: </P>
<br>

</html>]]></string>
    <string name="tozihat"><![CDATA[<html>
      <P>وبسایت بیتوته    www.beytoote.com</P>
      <P>وبسایت آکاایران  www.akairan.com</P>
</html>]]></string>
    <string name="pamchal">شما انسانی بسیار پرجنب‌و‌جوش هستید که از یک‌جا نشستن و سکون بیزارید. از شکل‌ هندسی نامنظم گل‌های پامچال مشخص است که شما شخصیتی تغییرپذیر داريد. به گونه‌ای تضاد و ناهماهنگی در جمع را دوست ندارید و بیشتر علاقه‌مند هستید که با جمعی دوستانه و گرم و صمیمی رفت‌وآمد داشته باشید تا با افراد خانواده. در کل انسانی سرشار از شور و هیجان هستید.

</string>
    <string name="narges"> به نظر می‌رسد شما فردی کم‌حرف هستید؛ به گونه‌ای که برخی شما را منزوی و گوشه‌گیر می‌شناسند. اما خوب می‌دانید که گوش‌کردن از حرف‌زدن بهتر است. شما همیشه به دنبال پیشرفت هستید و دوست دارید از میان مشکلات عبور کنید تا به خوبی آنها را حل و فصل کنید. از کمک کردن به دیگران در حل مشکلات‌‌شان و گرفتن تصمیم عاقلانه دریغ نمی‌کنید. برای خانواده بسیار ارزش و احترام قائلید.
</string>
    <string name="sonbol">شما شخصیتی لطیف و رمانتیک دارید. احساسات، شما را وادار می‌کند که دیگران را مقدم بر خود بدارید. از رنگ‌های ملیح و روشن لذت می‌برید و با همه نزدیکان صادقانه رفتار می‌کنید. از هنر و زیبايی‌هاي جهان لذت می‌‌برید. احساسات باعث می‌شود تا نظر دیگران تا حدودی بر شما تاثیرگذار باشد. برای موفقیت می‌جنگید و خلق‌وخوی آرام‌تان تاثیر مثبتی بر اطرافیان دارد.
</string>
    <string name="rose">دارای شور و شوق نهفته در اعماق وجودتان هستید. با اراده تصمیم می‌گیرید و در کامل بودن کارهایتان پافشاری می‌کنید. در هنگام کار، فردی جدی هستيد و در محفل خانواده با محبت رفتار می‌کنید. آرزوهای بسیاری در سر دارید و تلاش می‌کنید تا سریعا به تحقق بپیوندند. بروز احساسات تا حدودی برایتان مشکل است اما به شدت علاقه‌مند به خانواده هستید و با آنان عاشقانه رفتار می‌کنید. از زندگی پر جنب‌وجوش همراه با رضايت‌مندی لذت می‌برید.
</string>
    <string name="orchid"> انسانی بسیار فرهیخته و دوست‌دار علم و هنر هستید. از نظم و ترتیب بسیار لذت می‌برید و برای آینده با برنامه‌ریزی پیش می‌روید. سعی در فراهم آوردن زندگی آرام و ثابت و عاری از خطر کردن هستید. لازمه موفقیت در زندگی را صبر، تلاش و نظم می‌دانید و امیدوارید تا الگویی برای اطرافیان باشید. فردی هستید که در برابر مشکلات به خود تسلط پیدا کرده و سریعا به دنبال راه‌حل برای آن دست به کار می‌‌شوید.

</string>
    <string name="bluebell"> دارای روحیه‌ای آرام و خشنودی خاطر هستید. مایلید در آرامش و سکوت به کارهای روزانه بپردازید و تاحدودی گوشه‌گیر هستید. اعتقاد دارید که سکوت شرط لازم زیبایی است و چون دریا همه را غرق خود می‌کند. دارای محبت بسیار نسبت به اعضای خانواده‌تان هستید و جمع دوستانه شما را به وجد می‌آورد. فردی وفادار به همسر و خانواده هستید و با دیگران در هر مسائلی به راحتی کنار می‌آیید و مشکلات را حل و فصل می‌کنید.

</string>
    <string name="stock"> فردی بسیار محتاط به نظر می‌آیید که بسیار علاقه‌مند به پاکیزگی‌ ا‌ست. در تصمیم‌گیری‌ها دقت کافی را به کار می‌برید تا دچار اشتباه نشوید. معتقدید هر سخن جایی و هر نکته مکانی دارد. عاشق لباس‌های زیبا همراه با رایحه‌های خوش هستید. تا حدی کنجکاو و به دنبال شگفت‌زده کردن اطرافیان هستید. از فعالیت‌های جدید و مبتکرانه لذت می‌برید و سعی دارید که با تهیه  یک هدیه حتی یک شاخه گل همسرتان را خوشحال کنید.

</string>
    <string name="banafshe"> فردی مهربان و دلسوزید. عاشق یادگاری دوستان و آشنایان هستید. به خاطر شادی‌هایی که در زندگی دارید شکرگزارید و مایلید آن‌ها را با دیگران تقسیم کنید. محبت هدیه همیشگی شما به خانواده‌تان است. در کارهایتان پشتکار و در برابر مشکلات مقاوم هستید. کمی زودرنج‌ هستيد اما به سرعت ناراحتی‌ها را فراموش می‌کنید. دیگران را به خاطر از دست‌ دادن موقعیت‌ها، تشویق به تلاش و امیدواری می‌کنید.
</string>
    <string name="shaqayeq">انسانی خستگی ناپذیر و شلوغ هستید. در کارهای روزانه فعاليد و با شور و شوق فراوان هر کاری را انجام می‌دهید. تاحدودی از شاخه‌ای به شاخه دیگر می‌پرید و برخی کارها را نیمه‌کاره رها می‌کنید. اشتیاق فراوانی به کسب علم و ورزش دارید و طبیعت دوست صمیمی شما محسوب می‌شود. در بروز مشکلات زود از کوره در می‌روید ولی فردی شوخ طبع هستید که در نبودتان جای خالی شما به خوبی احساس می‌شود.
</string>
    <string name="personality_qOne">چه موقع از روز بهترین و آرام ترین احساس را دارید؟</string>
    <string name="personality_qTwo">معمولاً چگونه راه مى روید؟</string>
    <string name="personality_qThree">وقتى با دیگران صحبت مى کنید</string>
    <string name="personality_qFour">وقتى آرام هستید، چگونه مى نشینید؟</string>
    <string name="personality_qFive">وقتى چیزى واقعاً براى شما جالب است، چگونه واکنش نشان مى دهید؟</string>
    <string name="personality_qSix">وقتى وارد یک میهمانى یا جمع مى شوید</string>
    <string name="personality_qSeven">سخت مشغول کارى هستید، بر آن تمرکز دارید، اما ناگهان دلیلى یا شخصى آن را قطع مى کند؛</string>
    <string name="personality_qEight">کدامیک از مجموعه رنگ هاى زیر را بیشتر دوست دارید؟</string>
    <string name="personality_qNine">وقتى در رختخواب هستید (در شب) در آخرین لحظات پیش از خواب، در چه حالتى دراز مى کشید؟</string>
    <string name="personality_qTen">آیا شما غالباً خواب مى بینید که:</string>
    <string name="calculator">تیجرو نشونم بده</string>
    <string name="higher60">دیگران در ارتباط و رفتار با شما شدیداً مراقب و هوشیار هستند آنها شما را مغرور، خودمحور و بى نهایت سلطه جو مى دانند، گرچه شما را تحسین مى کنند و به ظاهر مى گویندکاش من جاى تو بودم!! اما معمولاً به شما اعتماد ندارند و نسبت به ایجاد رابطه اى عمیق و دوستانه بى میل و فرارى هستند.</string>
    <string name="as51to60">بدانید دوستان شما را تحریک پذیر مى دانند، بدون فکر عمل مى کنیدو سریع از موضوعات ناخوشایند برآشفته مى شوید ، علاقه مند به رهبرى جمع و تصمیم گیریهاى سریع دارید (هرچند اغلب درست از کار درنمى آیند!) دیگران شما را جسور و اهل مخاطره مى دانند. کسى که همه چیز را تجربه و امتحان مى کند، از ماجراجویى لذت مى برد و در مجموع به دلیل ایجاد شرایط و بستر هیجانات توسط شما، از همراهى تان لذت مى برند.</string>
    <string name="as41to50">به خود امیدوار باشید ، دیگران شما را بانشاط، سرزنده، سرگرم کننده و جالب و جذاب مى بینند. شما دائماً مرکز توجه جمع هستید و از تعادل رفتارى خوبى بهره مند هستید. فردى مهربان، ملاحظه کار و فهمیده به نظر مى رسید. قادر هستید به موقع باعث شادى و خوشى دوستانتان شوید و اسباب هلهله و خنده آنها را فراهم کنید و در همان شرایط و در صورت لزوم بهترین کمک بر اعضاى گروه هستید.</string>
    <string name="as31to40">بدانید در نظر سایرین معقول، هوشیار، دقیق ، ملاحظه کار و اهل عمل هستید. مجله سرگرمی تالاب : همه مى دانند شما باهوش و با استعداد هستید اما مهمتر از همه فروتن و متواضع هستید. به سرعت و سادگى با دیگران باب دوستى را باز نمى کنید. اما اگر با کسى دوست شوید صادق، باوفا و وظیفه شناس هستید. اما انتظار بازگشت این صداقت و صمیمیت از طرف دوستانتان را دارید گرچه سخت دوست مى شوید اما سخت تر دوستى ها را رها مى کنید.</string>
    <string name="as21to30">در نظر سایرین فردى زحمت کش هستید اما متأسفانه گاهى اوقات ایرادگیر هستید. شما بسیار بسیار محتاط و بى نهایت ملاحظه کار به نظر مى رسید. زحمتکشى که در کمال آرامش و با صرف زمان زیاد در جمع بار دیگران را بردوش مى کشد و بدون فکر و براساس تحریک لحظه اى و آنى هرگز نظر نمى دهد. دیگران مى دانند شما همیشه تمام جوانب کارها را مى سنجید و سپس تصمیم مى گیرید.</string>
    <string name="lower21">دیگران شما را خجالتى، عصبى و آدمى شکاک و دودل مى دانند شخصى که همیشه سایرین به عوض او فکر مى کنند، برایش تصمیم مى گیرند و از او مراقبت مى کنند. کسى که اصلاً تمایل به درگیرشدن در کارهاى گروهى و ارتباط با افراد دیگر را ندارد.</string>
    <string name="personality_description">به این تست شک نکنید. این آخرین و استانداردترین تست شخصیت شناسى است که این روزها در اروپا بین روانشناسان در جریان است.</string>
    <string name="date_header_tv">تست شخصیت شناسی با اعداد تولد شما</string>
    <string name="date_desc_tv">با اعداد تولد به شخصیت خود و دیگران پی ببرید. عدد تولد خود را بگویید تا شخصیت شما را بگویم!,روانشناسان شخصیتی براین عقیده هستند که شماره تولد، شما را از آن چیزی که می خواهید باشید دور نمی کند، بلکه مانند رنگی است که نوع آن و زیبایی اش برای افراد مختلف متفاوت است.</string>
    <string name="date_howto_tv">لطفا تاریخ تولد خود را وارد نمایید.</string>
    <string name="one">”یک” ها پایه و اساس زندگی هستند. همیشه عقاید جدید و بدیع دارند و این حالت در آنها طبیعی است.

همیشه دوست دارند تمامی کارها و مسائل بر حول محوری که آنها می گویند و تعیین می کنند در گردش باشد و چون مبتکر هستند، گاهی خود خواه می شوند.

با این حال ”یک” ها بشدت صادق و وفادارند و به خوبی مهارتهای سیاسی را یاد میگیرند . همیشه دوست دارند حرف اول را بزنند و غالبا رهبر و فرمانده هستند، چون عاشق این هستند که ”بهترین” باشند .

در استخدام خود بودن و برای خود کار کردن بزرگترین کمک به آنهاست ولی باید یاد بگیرند عقاید دیگران ممکن است بهتر باشد و باید با رویی باز آنها را نیز بشنوند.</string>
    <string name="two">”دو” ها سیاستمدار به دنیا می آیند ! از نیاز دیگران خبر دارند و غالبا پیش از دیگران به آنها فکر می کنند .

اصلا تنهایی را دوست ندارند . دوستی و همراهی با دیگران برایشان بسیار مهم است و می تواند آنها را به موفقیت در زندگی رهنمون سازد.

اما از طرف دیگر ، چنانچه در دوستی با کسی احساس ناراحتی کنند ترجیح می دهند تنها باشند.از آنجایی که ذاتا خجالتی هستند باید در تقویت اعتماد به نفس خود تلاش کنند و با استفاده از لحظه ها و فرصت ها آنها را از دست ندهند.</string>
    <string name="three">” سه ” ها ایده آلیست هستند،با شخصیت بسیار فعال،اجتماعی،جذاب،رمانتیک وبسیار بردبار و پر تحمل .خیلی کارها را با هم شروع می کنند اما همه آنها را پیگیری نمی کنند.

دوست دارند که دیگران شاد باشند و برای این کار تمام تلاش خود رابه کار می گیرند. بسیار محبوب اجتماعی و ایده آلیست هستند اما باید یاد بگیرند که دنیا را از دید واقعگرایایه تری هم ببینند.
 </string>
    <string name="iTest_rgOne_tv">فرض کنید شما مشخصه صورت کسی هستید,کدام قسمت ازصورت او هستید؟</string>
    <string name="iTest_rgOne_rbOne">چین وچروک</string>
    <string name="iTest_rgOne_rbTwo">لکه</string>
    <string name="iTest_rgOne_rbThree">خال زیبایی</string>
    <string name="iTest_rgOne_rbFour">کک ومک</string>
    <string name="iTest_rgOne_rbFive">لبخند</string>
</resources>