<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iTest_rgOne_tv"
            style="@style/questionTextViews"/>

        <LinearLayout
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/qOne"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/iTest_rgOne_rbOne"
                style="@style/answerTextViews"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/questionImageViews"
                android:src="@drawable/poop"/>

        </LinearLayout>

        <LinearLayout
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/qTwo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/iTest_rgOne_rbTwo"
                style="@style/answerTextViews"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/questionImageViews"
                android:src="@drawable/poop"/>

        </LinearLayout>

        <LinearLayout
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/qThree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/iTest_rgOne_rbThree"
                style="@style/answerTextViews"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/questionImageViews"
                android:src="@drawable/poop"/>

        </LinearLayout>

        <LinearLayout
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/qFour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/iTest_rgOne_rbFour"
                style="@style/answerTextViews"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/questionImageViews"
                android:src="@drawable/poop"/>

        </LinearLayout>

        <LinearLayout
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/qFive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/iTest_rgOne_rbFive"
                style="@style/answerTextViews"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/questionImageViews"
                android:src="@drawable/poop"/>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>